# LLM-Projects

./: README.md  pyproject.toml
AI-Research-Agent/: research_agent.py
AI_Agent_Framework_Scratch/: ReadMe.md
GRPO-Implementation/: Fietune_qwen_0_5b__grpo.ipynb  GRPO_Scratch_Pytorch.ipynb
Langgraph/: langgraph-1.ipynb
Linkedin-Posts-Code/: Double_Descent_Implementation.ipynb  Lost-In-Middle-Test.ipynb
Scratch-Implementation/BM25-Scratch/: README.md  arxiv_loader.py
Scratch-Implementation/BM25-Scratch/backend/: api.py  bm25.py  search.py
Scratch-Implementation/BM25-Scratch/data/: arxiv_titles.txt
Scratch-Implementation/BM25-Scratch/frontend/: index.html  style.css
Text-Gen-Viz/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  cli.py  docker-commands.md  generator.py  model_loader.py  visualizer.py
Text-Gen-Viz/templates/: index.html
